--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 <body>
   <h1>Express</h1>
   <p>Welcome to Express</p>
+  <a href="http://localhost:3000/auth/login">Login with Strava</a>
 </body>
 
 </html>
